--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
             </div>
 
             <p class="brands-text">
-                Productos Originales: NIKE - ADIDAS - ACSIS - THE NORT FACE - PUMA - SKERCHERS - PANCOT - BALCK YAK - LAFUMA Y MÁS
+                Productos Originales: NIKE - ADIDAS - ACSIS - THE NORT FACE - PUMA - SKERCHERS - PANCOT - BLACK YAK - LAFUMA Y MÁS
             </p>
 
             <p class="price-text">Mejores Precios Accesibles</p>
